@@ -250,6 +250,8 @@ in each release of OpenJPA.</P>
 
 <h4>Bug</h4>
 <ul>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1091'>OPENJPA-1091</a>] -         ReverseMappingTool fails for openjpa-examples/reversemapping sample
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1510'>OPENJPA-1510</a>] -         Documentation corrections
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1550'>OPENJPA-1550</a>] -         When batchLimit=-1 or &gt;1 and an exception is caused, the params and failedObject are missing from the resultant exception.
@@ -266,6 +268,8 @@ in each release of OpenJPA.</P>
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1604'>OPENJPA-1604</a>] -         Setting PessimisticLockManager fails to append &quot;for update clause&quot; to the select statement
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1605'>OPENJPA-1605</a>] -         ReverseMappingTool (SchemaGenerator) bug
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1608'>OPENJPA-1608</a>] -         PESSIMISTIC_WRITE is not working in Informix
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1609'>OPENJPA-1609</a>] -         PessimisticLockException instead of LockTimeoutException thrown on DB2V9 for ZOS
@@ -275,6 +279,10 @@ in each release of OpenJPA.</P>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1618'>OPENJPA-1618</a>] -         Exception during factory creation due to javax.persistence.transactionType
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1625'>OPENJPA-1625</a>] -         Inconsistent creation of StateManagerImpl in BrokerImpl
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1630'>OPENJPA-1630</a>] -         NPE in MetaDataRepository when preloading is enabled under heavy stress.
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1631'>OPENJPA-1631</a>] -         MetaDataRepository preload doesn't load JAXB meta data
 </li>
 </ul>
 
@@ -287,6 +295,8 @@ in each release of OpenJPA.</P>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1603'>OPENJPA-1603</a>] -         Decouple the QueryCache from the DataCache
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1622'>OPENJPA-1622</a>] -         Invoking MetaModel generator
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/OPENJPA-1628'>OPENJPA-1628</a>] -         Output control for generated canonical metamodel source code
 </li>
 </ul>
 
